--- a/JGDrawing_Demo/JGDrawing_Demo/Base.lproj/Main.storyboard
+++ b/JGDrawing_Demo/JGDrawing_Demo/Base.lproj/Main.storyboard
@@ -24,7 +24,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="-1521"/>
+            <point key="canvasLocation" x="1639" y="-1520"/>
+        </scene>
+        <!--Draw Controller-->
+        <scene sceneID="97x-RN-L0t">
+            <objects>
+                <viewController id="uZP-LL-2mK" customClass="JGDrawController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bqm-p7-v29">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="85f-bU-RYV"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="kCu-9V-FZT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GTV-mR-iZd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3381.1594202898555" y="-782.60869565217399"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="0RR-yD-jMS">
@@ -32,12 +48,13 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="OoH-jO-hgr" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JZg-gg-OAi">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="BrT-bj-weF"/>
-                        <segue destination="AKo-vT-qss" kind="relationship" relationship="viewControllers" id="Ofj-UH-wjx"/>
+                        <segue destination="bzB-6R-gK1" kind="relationship" relationship="viewControllers" id="Ofj-UH-wjx"/>
                         <segue destination="oRJ-yi-qX6" kind="relationship" relationship="viewControllers" id="c1l-Yl-3qT"/>
                         <segue destination="add-3W-TAe" kind="relationship" relationship="viewControllers" id="2v4-Gv-MP0"/>
                     </connections>
@@ -62,7 +79,7 @@
             </objects>
             <point key="canvasLocation" x="2759" y="699"/>
         </scene>
-        <!--Item-->
+        <!--Two Controller-->
         <scene sceneID="5Ll-an-ngv">
             <objects>
                 <viewController id="AKo-vT-qss" customClass="JGTwoController" sceneMemberID="viewController">
@@ -72,11 +89,17 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="pdq-lC-C5z"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="pMZ-1e-9aG"/>
+                    <navigationItem key="navigationItem" id="o0a-rA-8ph">
+                        <barButtonItem key="rightBarButtonItem" title="绘图" id="Mu7-8N-TQt">
+                            <connections>
+                                <segue destination="uZP-LL-2mK" kind="push" id="Ddh-nX-D3w"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BFj-t6-ubO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="-781"/>
+            <point key="canvasLocation" x="2655.072463768116" y="-781.79347826086962"/>
         </scene>
         <!--Item-->
         <scene sceneID="jtx-vj-Sct">
@@ -112,6 +135,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FAM-44-9Ov" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1748" y="699"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="3jT-jP-eel">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bzB-6R-gK1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="pMZ-1e-9aG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MH6-bT-LVO">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AKo-vT-qss" kind="relationship" relationship="rootViewController" id="iLz-aC-5Wy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NfJ-Oo-Qza" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1747.826086956522" y="-781.79347826086962"/>
         </scene>
     </scenes>
 </document>
